# advent2024

./: .gitignore  Cargo.toml
benches/: example.rs
src/: lib.rs  main.rs
src/day01/: mod.rs
src/day02/: mod.rs
src/day03/: mod.rs
src/day04/: mod.rs
src/day05/: mod.rs
src/day06/: mod.rs
src/day07/: mod.rs
src/day08/: mod.rs
src/day09/: mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day12/: mod.rs
src/day13/: mod.rs
src/day14/: mod.rs
src/day15/: mod.rs
src/day16/: mod.rs  search.rs
src/day17/: mod.rs  vm.rs
src/day18/: mod.rs
src/day19/: mod.rs
src/day20/: mod.rs
src/day21/: keypad.rs  mod.rs  path.rs
src/day22/: mod.rs
src/day23/: mod.rs
src/day24/: mod.rs  parser.rs
src/day25/: mod.rs
src/template/: mod.rs
