[package]
name = "advent-2024"
version = "0.1.0"
edition = "2021"
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."aoc-utils"]
opt-level = 3

[dependencies]
aoc-utils = { path = "../aoc-utils" }
allocator-api2 = "0.2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
itertools = "0.13"
num = "0.4"
rayon = "1.10"
thiserror = "1.0"
tracing = "0.1"
colored = "2.1.0"
regex = "1.11.1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = [
    "plotters",
] }
rstest = "0.23"

[[bench]]
name = "example"
harness = false
